[gd_scene load_steps=4 format=2]

[ext_resource path="res://FireSpinner/FireBallSpinner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Demo.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[node name="Demo" type="Node2D"]
script = ExtResource( 2 )

[node name="FireBallSpinner" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 128 )
start_direction = -90
length = 3

[node name="GUI" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 179.0
margin_right = 312.0
margin_bottom = 98.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 133.0
margin_bottom = 118.0

[node name="RefreshButton" type="Button" parent="GUI/VBoxContainer"]
margin_right = 133.0
margin_bottom = 16.0
text = "Reload"

[node name="RotationStyle" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 20.0
margin_right = 133.0
margin_bottom = 38.0

[node name="NameLabel" type="Label" parent="GUI/VBoxContainer/RotationStyle"]
margin_top = 4.0
margin_right = 55.0
margin_bottom = 14.0
text = "Rotation Style"

[node name="OptionButton" type="OptionButton" parent="GUI/VBoxContainer/RotationStyle"]
margin_left = 59.0
margin_right = 107.0
margin_bottom = 18.0
text = "Spin"
items = [ "Spin", null, false, 0, null, "Swing", null, false, 1, null ]
selected = 0

[node name="StartDirection" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 42.0
margin_right = 133.0
margin_bottom = 58.0

[node name="NameLabel" type="Label" parent="GUI/VBoxContainer/StartDirection"]
margin_top = 3.0
margin_right = 60.0
margin_bottom = 13.0
text = "Start Direction"

[node name="HSlider" type="HSlider" parent="GUI/VBoxContainer/StartDirection"]
margin_left = 64.0
margin_right = 114.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
min_value = -180.0
max_value = 180.0
step = 45.0

[node name="ValueLabel" type="Label" parent="GUI/VBoxContainer/StartDirection"]
margin_left = 118.0
margin_top = 3.0
margin_right = 123.0
margin_bottom = 13.0
text = "0"

[node name="SpinSpeed" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 62.0
margin_right = 133.0
margin_bottom = 78.0

[node name="NameLabel" type="Label" parent="GUI/VBoxContainer/SpinSpeed"]
margin_top = 3.0
margin_right = 70.0
margin_bottom = 13.0
rect_min_size = Vector2( 70, 0 )
text = "Spin Speed"

[node name="HSlider" type="HSlider" parent="GUI/VBoxContainer/SpinSpeed"]
margin_left = 74.0
margin_right = 124.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
min_value = -100.0
step = 10.0
value = 90.0

[node name="ValueLabel" type="Label" parent="GUI/VBoxContainer/SpinSpeed"]
margin_left = 128.0
margin_top = 3.0
margin_right = 133.0
margin_bottom = 13.0
text = "0"

[node name="SwingDegrees" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 82.0
margin_right = 133.0
margin_bottom = 98.0

[node name="NameLabel" type="Label" parent="GUI/VBoxContainer/SwingDegrees"]
margin_top = 3.0
margin_right = 70.0
margin_bottom = 13.0
rect_min_size = Vector2( 70, 0 )
text = "Swing Degrees"

[node name="HSlider" type="HSlider" parent="GUI/VBoxContainer/SwingDegrees"]
margin_left = 74.0
margin_right = 124.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
min_value = 45.0
max_value = 90.0
step = 45.0
value = 90.0

[node name="ValueLabel" type="Label" parent="GUI/VBoxContainer/SwingDegrees"]
margin_left = 128.0
margin_top = 3.0
margin_right = 133.0
margin_bottom = 13.0
text = "0"

[node name="SwingSpeed" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 102.0
margin_right = 133.0
margin_bottom = 118.0

[node name="NameLabel" type="Label" parent="GUI/VBoxContainer/SwingSpeed"]
margin_top = 3.0
margin_right = 70.0
margin_bottom = 13.0
rect_min_size = Vector2( 70, 0 )
text = "Swing Speed"

[node name="HSlider" type="HSlider" parent="GUI/VBoxContainer/SwingSpeed"]
margin_left = 74.0
margin_right = 124.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
min_value = -100.0
step = 10.0
value = 90.0

[node name="ValueLabel" type="Label" parent="GUI/VBoxContainer/SwingSpeed"]
margin_left = 128.0
margin_top = 3.0
margin_right = 133.0
margin_bottom = 13.0
text = "0"

[connection signal="pressed" from="GUI/VBoxContainer/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="item_selected" from="GUI/VBoxContainer/RotationStyle/OptionButton" to="." method="_on_RotationStyleOptionButton_item_selected"]
[connection signal="value_changed" from="GUI/VBoxContainer/StartDirection/HSlider" to="." method="_on_StartDirectionHSlider_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/SpinSpeed/HSlider" to="." method="_on_SpinSpeedHSlider_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/SwingDegrees/HSlider" to="." method="_on_SwingDegreesHSlider_value_changed"]
[connection signal="value_changed" from="GUI/VBoxContainer/SwingSpeed/HSlider" to="." method="_on_SwingSpeedHSlider_value_changed"]
